===   0.2.7

* issues closed
  - 28  git comments <my-review-branch> would fail to show any comments.

===   0.2.6

* issues closed
  - 15  git review will now attempt to automatically FF rebase.
  - 18  git commands and error now logged.
  - 21  git work-on --continue will now assume an <upstream> of the user's
        latest review topic.
  - 23  git work-on <topic> will no longer erroneously report the existence of
        reviewer comments because of comments made to an earlier (and now
        accepted) topic of the same name.
  - 6   git-topic learned abandon [<topic>] command, to delete topics.
  - 5   git-topic status now shows age of review branches in summary.

* other changes
  -     git work-on <review-topic> will now remove the review branch and reset,
        just as it does for <rejected-topic>, and as the help documentation
        claims.
  -     comment formatting in git comment now respects paragraph breaks.

===   0.2.5

* issues closed
  - 9   git comments <spec> now asks for the right range.
  - 11  git comments now falls back to name-rev, so works even for remote
        branches.
  - 16  shorthand aliases not installed by git-topic setup.
  - 17  git comment reports to the user if they entered a blank comment.
  - 20  refspecs now use +, i.e. they autoforce.

====  0.2.4.1

* issue 14 closed. Added --completion-help like output to
  +post_install_message+.  Also updated the message to simply tell the user to
  install with --no-wrappers.

===   0.2.4

* issue 10 closed. Comments did not survive rebase.

==    0.1.0 / 2010-03-05

* 1 major enhancement
  * Birthday!
